# fts-rtmidi

./: .gitignore  LICENSE.md  README.md  __pyproject.toml  pyproject.toml  setup.py  test.py
fts_rtmidi.egg-info/: PKG-INFO
ftsmidi/: __init__.py  midi_sender.py
ftsmidi/midi_format/: __init__.py  encode.py  midi_enums.py
