[build-system]
requires = ["setuptools>=61.0", "python-rtmidi>=1.5.8"]
build-backend = "setuptools.build_meta"

[project]
name = "fts-rtmidi"
version = "0.0.1"
authors = [
    {name="Ferdinand Oliver M Tonby-Strandborg", email="ferdinand.tonby.strandborg@gmail.com"},
]
description = "A simple class for sending MIDI messages"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""
